# regatta

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  deny.toml  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts
.dev-spec-kit/: LEDGER.md  RESUME.md  TRACKING.md  config.json  graph-state.json  graph.json  journal.jsonl  laws.md
.dev-spec-kit/laws/: best-practices-quality-gates.md  best-practices-rust.md  best-practices-tauri.md
.dev-spec-kit/specs/: apply.md  approval-parse.md  approval-resp.md  approval-rt.md  approve-wire.md  attention.md  autopause.md  backend-dispatch.md  backend.md  badge.md  board.md  budget.md  burn.md  codex-launch.md  codex-meta.md  codex.md  config-store.md  config.md  cost-store.md  cost.md  frame.md  git-diff.md  git-read.md  git-status.md  golive.md  index.md  layout.md  live-launch.md  live-view.md  mask.md  materialize.md  mcp-approve.md  mcp-dispatch.md  mcp-serve.md  proof.md  reattach.md  registry.md  resume.md  review.md  rpc.md  (+13 more)
.github/workflows/: ci.yml
docs/: M1-security-review.md  M1-test-matrix.md  M2-security-review.md  M2-test-matrix.md  M3-security-review.md  M3-test-matrix.md  M4-security-review.md  M4-test-matrix.md  M5-security-review.md  M5-test-matrix.md  M6-security-review.md  M6-test-matrix.md  M7-security-review.md  M7-test-matrix.md  M8-security-review.md  M8-test-matrix.md  M9-security-review.md  M9-test-matrix.md
regatta-core/: CHANGELOG.md  Cargo.toml
regatta-core/src/: approval.rs  attention.rs  backend.rs  board.rs  budget.rs  config.rs  cost.rs  git.rs  layout.rs  lib.rs  mcp.rs  runtime.rs  slug.rs  stream.rs  transcript.rs  view.rs  worktree.rs
regatta-core/tests/: adversarial.rs  adversarial_approval.rs  adversarial_codex.rs  adversarial_mcp.rs  adversarial_runtime.rs
regatta-git/: Cargo.toml
regatta-git/src/: lib.rs
regatta-indexer/: Cargo.toml
regatta-indexer/examples/: scan.rs
regatta-indexer/src/: lib.rs
regatta-store/: Cargo.toml
regatta-store/src/: lib.rs
regatta-supervisor/: Cargo.toml
regatta-supervisor/src/: lib.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
