[package]
name = "regatta_supervisor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Glue: spawn agent processes in their own process group with guaranteed full-tree teardown."
publish = false

[dependencies]
regatta_core = { path = "../regatta-core" }
tokio = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
