# Standalone (excluded from the root workspace until M1) so M0's `cargo build`/CI
# stays scoped to the pure core and doesn't need the frontend bundle to exist.
[package]
name = "regatta"
version = "0.3.0" # x-release-please-version
edition = "2021"
license = "MIT"
description = "Regatta — the Tauri desktop app (thin glue over regatta_core)."

[lib]
name = "regatta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regatta_core = { path = "../regatta-core" }
regatta_supervisor = { path = "../regatta-supervisor" }
regatta_store = { path = "../regatta-store" }
regatta_indexer = { path = "../regatta-indexer" }
